--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,7 @@ site:
 nav:
   items: [
     {cname: '设置', controller: 'settings', link: '/cpanel/settings'}, 
+    {cname: '分类', controller: 'sections', link: '/cpanel/sections'}, 
   ]
 
 fnav:
