add about & contact pages

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,7 @@ site:
 nav:
   items: [
     {cname: '设置', controller: 'settings', link: '/cpanel/settings'}, 
+    {cname: '页面', controller: 'pages', link: '/cpanel/pages'}, 
     {cname: '分类', controller: 'sections', link: '/cpanel/sections'}, 
     {cname: '节点', controller: 'nodes', link: '/cpanel/nodes'}, 
     {cname: '物品', controller: 'things', link: '/cpanel/things'}, 
